--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "require": {
         "ddeboer/vatin": "*"
     },
+    "require-dev": {
+        "symfony/validator": "~2.3"
+    },
     "autoload": {
         "psr-0": {
             "Ddeboer\\VatinBundle": ""
