--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
+  - 5.5
+  - 5.6
+  - 7.0
+  - 7.1
 
-before_script:
-  - composer install --dev
+matrix:
+  - php: 5.5
+    env: COMPOSER_FLAGS="--prefer-lowest"
+
+install: composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
 
 script: phpunit --coverage-text
