--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,16 @@
         }
     ],
     "require": {
-        "ddeboer/vatin": "*"
+        "ddeboer/vatin": "^1.0",
+        "symfony/framework-bundle": "^2.7 || ^3.0",
+        "symfony/validator": "^2.7 || ^3.0"
     },
     "require-dev": {
-        "symfony/validator": "~2.3"
+        "phpunit/phpunit": "^4.0 || ^5.0"
     },
     "autoload": {
-        "psr-0": {
-            "Ddeboer\\VatinBundle": ""
+        "psr-4": {
+            "Ddeboer\\VatinBundle\\": ""
         }
-    },
-    "target-dir": "Ddeboer/VatinBundle"
+    }
 }
