--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/validator": "^2.7 || ^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.0 || ^5.0"
+        "phpunit/phpunit": "^4.0 || ^5.0",
+        "doctrine/annotations": "^1.3"
     },
     "autoload": {
         "psr-4": {
