--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ddeboer/vatin-bundle",
-    "description": "Symfony2 bundle for the VATIN library",
+    "description": "Symfony bundle for the VATIN library",
     "keywords": [ "vat", "tax", "btw" ],
     "type": "symfony-bundle",
     "license": "MIT",
@@ -12,13 +12,13 @@
     ],
     "require": {
         "ddeboer/vatin": "^2.0",
-        "symfony/framework-bundle": "^2.7.8 || ^3.0",
-        "symfony/validator": "^2.7 || ^3.0"
+        "symfony/framework-bundle": "^2.7.8 || ^3.0 || ^4.0",
+        "symfony/validator": "^2.7 || ^3.0 || ^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0 || ^5.0",
         "doctrine/annotations": "^1.2",
-        "symfony/yaml": "^2.7 || ^3.0"
+        "symfony/yaml": "^2.7 || ^3.0 || ^4.0"
     },
     "autoload": {
         "psr-4": {
