--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,6 +25,7 @@
 
     <php>
         <server name="KERNEL_DIR" value="./Tests/Functional/app"/>
+        <server name="KERNEL_CLASS" value="AppKernel"/>
         <ini name="default_socket_timeout" value="3"/>
     </php>
 </phpunit>
