--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require-dev": {
         "phpunit/phpunit": "^4.0 || ^5.0",
         "doctrine/annotations": "^1.2",
-        "symfony/yaml": "^2.7 || ^3.0 || ^4.0 || ^5.0",
+        "symfony/yaml": "^2.7 || ^3.0 || ^4.0 || ^5.0"
     },
     "autoload": {
         "psr-4": {
