--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require": {
         "ddeboer/vatin": "^2.0",
-        "symfony/framework-bundle": "^2.7.8 || ^3.4.26 || ^4.1.12 || ^5.0",
-        "symfony/validator": "^2.7 || ^3.0 || ^4.0 || ^5.0"
+        "symfony/framework-bundle": "^3.4.26 || ^4.1.12 || ^5.0",
+        "symfony/validator": "^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0 || ^5.0",
