Fix namespace and optimize package

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
     "autoload": {
         "psr-4": {
             "Ddeboer\\VatinBundle\\": ""
-        }
+        },
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
     }
 }
