--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,15 @@
         }
     ],
     "require": {
+        "php": "^7.2 || ^8.0",
         "ddeboer/vatin": "^2.0",
-        "symfony/framework-bundle": "^3.4.26 || ^4.1.12 || ^5.0",
-        "symfony/validator": "^3.0 || ^4.0 || ^5.0"
+        "symfony/framework-bundle": "^4.4 || ^5.0",
+        "symfony/validator": "^4.0 || ^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.0 || ^5.0",
-        "doctrine/annotations": "^1.2",
-        "symfony/yaml": "^2.7 || ^3.0 || ^4.0 || ^5.0"
+        "phpunit/phpunit": "^8.5 || ^9.0",
+        "doctrine/annotations": "^1.13",
+        "symfony/yaml": "^4.4 || ^5.0"
     },
     "autoload": {
         "psr-4": {
