--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/validator": "^4.4.30 || ^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5.21 || ^9.5",
+        "phpunit/phpunit": "^9.5",
         "doctrine/annotations": "^1.13.2",
         "symfony/yaml": "^4.4 || ^5.0"
     },
