--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,16 @@
     "require": {
         "php": "^7.2 || ^8.0",
         "ddeboer/vatin": "^2.2.2",
-        "symfony/framework-bundle": "^4.4.30 || ^5.0",
-        "symfony/validator": "^4.4.30 || ^5.0"
+        "symfony/framework-bundle": "^4.4.31 || ^5.3",
+        "symfony/validator": "^4.4.31 || ^5.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^8.5.21 || ^9.5",
         "doctrine/annotations": "^1.13.2",
-        "symfony/yaml": "^4.4 || ^5.0"
+        "symfony/yaml": "^4.4.31 || ^5.3",
+        "symfony/dependency-injection": "^4.4.31 || ^5.3",
+        "symfony/config": "^4.4.31 || ^5.3",
+        "symfony/error-handler": "^4.4.31 || ^5.3"
     },
     "autoload": {
         "psr-4": {
