updated phpunit and composer

--- a/Tests/Functional/app/config/config.yml
+++ b/Tests/Functional/app/config/config.yml
@@ -1,5 +1,7 @@
 framework:
     secret: ddeboer
     test: ~
+    annotations:
+        enabled: true
     validation:
         enable_annotations: true
