--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,26 @@
     "require": {
         "php": ">=7.2",
         "ddeboer/vatin": "^2.0",
-        "symfony/framework-bundle": "^4.1.12 || ^5.0 || ^6.0",
+        "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0",
+        "symfony/dependency-injection": "^4.0 || ^5.0 || ^6.0",
+        "symfony/config": "^4.0 || ^5.0 || ^6.0",
         "symfony/validator": "^4.0 || ^5.0 || ^6.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^8.5",
         "doctrine/annotations": "^1.2",
-        "symfony/yaml": "^4.0 || ^5.0 || ^6.0"
+        "symfony/framework-bundle": "^5.0 || ^6.0",
+        "symfony/yaml": "^5.0 || ^6.0"
     },
     "autoload": {
         "psr-4": {
-            "Ddeboer\\VatinBundle\\": ""
-        },
-        "exclude-from-classmap": [
-            "/Tests/"
-        ]
+            "Ddeboer\\VatinBundle\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Ddeboer\\VatinBundle\\Tests\\": "tests"
+        }
     }
 }
