--- a/composer.json
+++ b/composer.json
@@ -11,21 +11,28 @@
         }
     ],
     "require": {
+        "php": ">=7.2",
         "ddeboer/vatin": "^2.0",
-        "symfony/framework-bundle": "^3.4.26 || ^4.1.12 || ^5.0",
-        "symfony/validator": "^3.0 || ^4.0 || ^5.0"
+        "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0",
+        "symfony/dependency-injection": "^4.0 || ^5.0 || ^6.0",
+        "symfony/config": "^4.0 || ^5.0 || ^6.0",
+        "symfony/validator": "^4.0 || ^5.0 || ^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.0 || ^5.0",
+        "roave/security-advisories": "dev-latest",
+        "phpunit/phpunit": "^8.5 || ^9.0",
         "doctrine/annotations": "^1.2",
-        "symfony/yaml": "^2.7 || ^3.0 || ^4.0 || ^5.0"
+        "symfony/framework-bundle": "^5.0 || ^6.0",
+        "symfony/yaml": "^5.0 || ^6.0"
     },
     "autoload": {
         "psr-4": {
-            "Ddeboer\\VatinBundle\\": ""
-        },
-        "exclude-from-classmap": [
-            "/Tests/"
-        ]
+            "Ddeboer\\VatinBundle\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Ddeboer\\VatinBundle\\Tests\\": "tests"
+        }
     }
 }
