--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit bootstrap="./Tests/Functional/app/autoload.php"
+<phpunit bootstrap="./tests/Functional/app/autoload.php"
          colors="true"
          convertErrorsToExceptions="true"
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
-         syntaxCheck="true">
+>
     <testsuites>
         <testsuite name="ddeboer/vatin-bundle test suite">
-            <directory suffix="Test.php">./Tests</directory>
+            <directory suffix="Test.php">./tests</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
-            <directory>./</directory>
+            <directory>./src</directory>
             <exclude>
-                <directory>./Resources</directory>
-                <directory>./Tests</directory>
+                <directory>./src/Resources</directory>
+                <directory>./tests</directory>
                 <directory>./vendor</directory>
             </exclude>
         </whitelist>
     </filter>
 
     <php>
-        <server name="KERNEL_DIR" value="./Tests/Functional/app"/>
+        <server name="KERNEL_DIR" value="./tests/Functional/app"/>
         <server name="KERNEL_CLASS" value="AppKernel"/>
         <ini name="default_socket_timeout" value="3"/>
     </php>
