--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     "require": {
         "php": ">=7.2",
         "ddeboer/vatin": "^2.0",
-        "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0",
-        "symfony/dependency-injection": "^4.0 || ^5.0 || ^6.0",
-        "symfony/config": "^4.0 || ^5.0 || ^6.0",
-        "symfony/validator": "^4.0 || ^5.0 || ^6.0"
+        "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0 || ^7.0",
+        "symfony/dependency-injection": "^4.0 || ^5.0 || ^6.0 || ^7.0",
+        "symfony/config": "^4.0 || ^5.0 || ^6.0 || ^7.0",
+        "symfony/validator": "^4.0 || ^5.0 || ^6.0 || ^7.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
