--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^8.5 || ^9.0",
         "doctrine/annotations": "^1.2",
-        "symfony/framework-bundle": "^5.0 || ^6.0",
-        "symfony/yaml": "^5.0 || ^6.0"
+        "symfony/framework-bundle": "^5.0 || ^6.0 || ^7.0",
+        "symfony/yaml": "^5.0 || ^6.0 || ^7.0"
     },
     "autoload": {
         "psr-4": {
