--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,24 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
-        "ddeboer/vatin": "^2.0",
-        "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0 || ^7.0",
-        "symfony/dependency-injection": "^4.0 || ^5.0 || ^6.0 || ^7.0",
-        "symfony/config": "^4.0 || ^5.0 || ^6.0 || ^7.0",
-        "symfony/validator": "^4.0 || ^5.0 || ^6.0 || ^7.0"
+        "php": ">=8.1",
+        "ddeboer/vatin": "^3.0",
+        "symfony/http-kernel": "^6.4 || ^7.0",
+        "symfony/dependency-injection": "^6.4 || ^7.0",
+        "symfony/config": "^6.4 || ^7.0",
+        "symfony/validator": "^6.4 || ^7.0"
     },
     "require-dev": {
+        "ext-soap": "*",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-phpunit": "^2.0",
+        "phpstan/phpstan-symfony": "^2.0",
+        "phpunit/phpunit": "^10.5",
+        "rector/rector": "^2.0",
         "roave/security-advisories": "dev-latest",
-        "phpunit/phpunit": "^8.5 || ^9.0",
-        "doctrine/annotations": "^1.2",
-        "symfony/framework-bundle": "^5.0 || ^6.0 || ^7.0",
-        "symfony/yaml": "^5.0 || ^6.0 || ^7.0"
+        "symfony/framework-bundle": "^6.4 || ^7.0",
+        "symfony/yaml": "^6.4 || ^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -33,6 +38,11 @@
     "autoload-dev": {
         "psr-4": {
             "Ddeboer\\VatinBundle\\Tests\\": "tests"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
         }
     }
 }
