--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit bootstrap="./tests/Functional/app/autoload.php"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
          colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
+         cacheDirectory=".phpunit.cache"
+         failOnEmptyTestSuite="true"
+         failOnIncomplete="true"
+         failOnRisky="true"
+         failOnSkipped="true"
+         failOnWarning="true"
+         displayDetailsOnIncompleteTests="true"
+         displayDetailsOnSkippedTests="true"
+         displayDetailsOnTestsThatTriggerDeprecations="true"
+         displayDetailsOnTestsThatTriggerErrors="true"
+         displayDetailsOnTestsThatTriggerNotices="true"
+         displayDetailsOnTestsThatTriggerWarnings="true"
 >
     <testsuites>
         <testsuite name="ddeboer/vatin-bundle test suite">
@@ -12,20 +21,21 @@
         </testsuite>
     </testsuites>
 
-    <filter>
-        <whitelist>
-            <directory>./src</directory>
-            <exclude>
-                <directory>./src/Resources</directory>
-                <directory>./tests</directory>
-                <directory>./vendor</directory>
-            </exclude>
-        </whitelist>
-    </filter>
-
     <php>
-        <server name="KERNEL_DIR" value="./tests/Functional/app"/>
-        <server name="KERNEL_CLASS" value="AppKernel"/>
+        <server name="KERNEL_DIR" value="./tests/Functional"/>
+        <server name="KERNEL_CLASS" value="Ddeboer\VatinBundle\Tests\Functional\AppKernel"/>
         <ini name="default_socket_timeout" value="3"/>
     </php>
+
+    <source>
+        <include>
+            <directory>./src</directory>
+        </include>
+        <exclude>
+            <directory>./tests</directory>
+            <directory>./var</directory>
+            <directory>./vendor</directory>
+            <file>./src/DdeboerVatinBundle.php</file>
+        </exclude>
+    </source>
 </phpunit>
